# skyffla

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  IROH_INFRA_NOTES.md  LICENSE  README.md  ROOM_MESH_DESIGN.local.md  STDIO_DUPLEX_SPEC.md  TODO.md
.github/workflows/: ci.yml  frontend-pages.yml  node-package.yml  python-package.yml  release.yml
crates/skyffla-cli/: Cargo.toml
crates/skyffla-cli/src/: accept_policy.rs  cli_error.rs  config.rs  local_state.rs  main.rs  session_runtime.rs  transfers.rs  ui.rs
crates/skyffla-cli/src/app/: commands.rs  identity.rs  mod.rs  sink.rs  trust.rs
crates/skyffla-cli/src/net/: framing.rs  local_discovery.rs  mod.rs  rendezvous.rs
crates/skyffla-cli/src/runtime/: clipboard.rs  handshake.rs  interactive.rs  interactive_commands.rs  interactive_control.rs  interactive_peer.rs  machine.rs  machine_command_line.rs  machine_links.rs  machine_state.rs  mod.rs  pipe.rs  room_tui.rs  session.rs  stdio.rs  transfer_automation.rs  transfer_progress.rs
crates/skyffla-cli/tests/: local_mode_duplex_end_to_end.rs  local_mode_end_to_end.rs  local_mode_race_end_to_end.rs  machine_end_to_end.rs  machine_local_end_to_end.rs  room_tui_end_to_end.rs  stdio_duplex_end_to_end.rs  stdio_end_to_end.rs
crates/skyffla-cli/tests/support/: mod.rs
crates/skyffla-protocol/: Cargo.toml
crates/skyffla-protocol/src/: framing.rs  lib.rs  room.rs  room_link.rs
crates/skyffla-rendezvous/: Cargo.toml
crates/skyffla-rendezvous/src/: app.rs  lib.rs  main.rs  store.rs
crates/skyffla-session/: Cargo.toml
crates/skyffla-session/src/: lib.rs  room.rs
crates/skyffla-transport/: Cargo.toml
crates/skyffla-transport/src/: lib.rs
crates/skyffla-transport/tests/: direct_directory_transfer_end_to_end.rs  direct_file_transfer_end_to_end.rs
demos/python-room-agents/: .env.example  PLAN.md  README.md  pyproject.toml
demos/python-room-agents/src/room_agents_demo/: __init__.py  artist.py  director.py  shared.py
demos/python-room-agents/tests/: test_messages.py
docs/: environment.md  file-transfer-architecture.md  file-transfer-benchmarks.md  iroh-infra-notes.md  machine-protocol.md  room-architecture.md  stdio-duplex-spec.md  versioning.md
examples/node/: README.md  package-lock.json  package.json
examples/node/simple-chat/: README.md  main.mjs
examples/node/sync-chat-and-channel/: README.md  main.mjs
examples/python/: .gitignore  README.md  pyproject.toml
examples/python/room-agents-studio/: .env.example  README.md  artist.py  director.py  test_messages.py  web.py
examples/python/simple-chat/: README.md  main.py
examples/python/src/skyffla_examples/: __init__.py
examples/python/src/skyffla_examples/room_agents_studio/: artist.py  director.py
examples/python/src/skyffla_examples/studio_app/: shared.py
examples/python/sync-chat-and-channel/: README.md  main.py
examples/python/tests/: test_room_agents_studio.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME  site.webmanifest
frontend/src/: App.css  App.tsx  index.css
scripts/release/: bootstrap-homebrew-tap.sh  cut-release.sh  extract-changelog-release-notes.sh  package-release.sh  render-homebrew-formula.sh  sync-example-wrapper-deps.sh
wrappers/node/: PUBLISHING.md  README.md  package-lock.json  package.json
wrappers/node/src/: errors.js  index.d.ts  index.js  protocol.js  room.js  version.js
wrappers/node/test/: models.test.js  smoke.test.js  version.test.js
wrappers/node/test/fixtures/: fake-skyffla-version-stderr  fake-skyffla-version-stdout
wrappers/python/: PUBLISHING.md  README.md  pyproject.toml
wrappers/python/examples/: sync_chat_and_channel.py
wrappers/python/src/skyffla/: __init__.py  client.py  models.py  sync.py
wrappers/python/tests/: test_models.py  test_smoke.py  test_sync_smoke.py
