[workspace]
members = [
    "crates/skyffla-cli",
    "crates/skyffla-protocol",
    "crates/skyffla-rendezvous",
    "crates/skyffla-session",
    "crates/skyffla-transport",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/jonaslindblom/skyfflacli"
documentation = "https://github.com/jonaslindblom/skyfflacli#readme"
repository = "https://github.com/jonaslindblom/skyfflacli"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
