[package]
name = "skyffla"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
iroh = "0.96"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
skyffla-protocol = { path = "../skyffla-protocol" }
skyffla-rendezvous = { path = "../skyffla-rendezvous" }
skyffla-session = { path = "../skyffla-session" }
skyffla-transport = { path = "../skyffla-transport" }
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }

[[bin]]
name = "skyffla"
path = "src/main.rs"
