[package]
name = "skyffla"
description = "Terminal-native peer communication tool"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
keywords = ["terminal", "p2p", "chat", "file-transfer"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
iroh = "0.96"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
skyffla-protocol = { path = "../skyffla-protocol" }
skyffla-rendezvous = { path = "../skyffla-rendezvous" }
skyffla-session = { path = "../skyffla-session" }
skyffla-transport = { path = "../skyffla-transport" }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread"] }

[[bin]]
name = "skyffla"
path = "src/main.rs"

[dev-dependencies]
axum = "0.8"
