[package]
name = "skyffla-protocol"
description = "Protocol types and framing for Skyffla"
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["networking", "protocol", "framing"]
categories = ["network-programming"]

[dependencies]
serde.workspace = true
serde_cbor.workspace = true
