[package]
name = "skyffla-protocol"
description = "Protocol types and framing for Skyffla"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
keywords = ["networking", "protocol", "framing"]
categories = ["network-programming"]

[dependencies]
serde.workspace = true
serde_cbor.workspace = true
