[package]
name = "skyffla-rendezvous"
description = "Skyffla rendezvous server"
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["networking", "server", "rendezvous", "p2p"]
categories = ["network-programming"]

[dependencies]
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde.workspace = true
serde_json = "1"
skyffla-protocol = { path = "../skyffla-protocol" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "skyffla-rendezvous"
path = "src/main.rs"
