[package]
name = "skyffla-session"
description = "Session state machine for Skyffla"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
keywords = ["networking", "session", "state-machine"]
categories = ["network-programming"]

[dependencies]
skyffla-protocol = { path = "../skyffla-protocol" }
