[package]
name = "skyffla-transport"
description = "Transport abstraction and iroh integration for Skyffla"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
keywords = ["networking", "transport", "iroh"]
categories = ["network-programming"]

[dependencies]
iroh = "0.96"
serde_json = "1"
skyffla-protocol = { path = "../skyffla-protocol" }
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
