[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skyffla-python-examples"
version = "0.1.0"
description = "Runnable Python examples for the published Skyffla wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0",
  "skyffla>=1.1.3,<2",
]

[project.scripts]
simple-chat = "skyffla_examples.simple_chat:main"
sync-chat-and-channel = "skyffla_examples.sync_chat_and_channel:main"
room-director = "skyffla_examples.room_agents_studio.director:main"
room-artist = "skyffla_examples.room_agents_studio.artist:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skyffla_examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
