[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skyffla-python-examples"
version = "0.1.0"
description = "Runnable Python examples for the published Skyffla wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0",
  "skyffla==1.2.1",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["room-agents-studio"]
