[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skyffla"
version = "2.1.2"
description = "Multi-party peer-to-peer rooms for terminals, agents, and scripts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Skyffla" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.8,<3",
  "typing-extensions>=4.9",
]

[project.urls]
Homepage = "https://github.com/skyffla/skyffla"
Repository = "https://github.com/skyffla/skyffla"
Issues = "https://github.com/skyffla/skyffla/issues"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skyffla"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
